Fixed issue with tags showing upon overflow in community thumbnails.

--- a/public/stylesheets/sass/community.sass
+++ b/public/stylesheets/sass/community.sass
@@ -83,9 +83,8 @@
 				margin-top: 0
 			.tags
 				position: absolute
-				top: 120px
-				left: 3px
-				padding: 5px
+				top: 125px
+				left: 8px
 				height: 17px
 				overflow: hidden
 				z-index: 3
