--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -4908,9 +4908,8 @@ form.user_edit {
         margin-top: 0; }
       .community ul.stories li.story .tags {
         position: absolute;
-        top: 120px;
-        left: 3px;
-        padding: 5px;
+        top: 125px;
+        left: 8px;
         height: 17px;
         overflow: hidden;
         z-index: 3; }
